--- a/package/NAMESPACE
+++ b/package/NAMESPACE
@@ -15,6 +15,7 @@ import(dynwrap)
 import(purrr)
 import(readr)
 import(tidyr)
+importFrom(dyneval,evaluate_ti_method)
 importFrom(dynwrap,create_ti_method_r)
 importFrom(glue,glue)
 importFrom(magrittr,"%$%")
